force-app/main/default/objects/SBQQ__ProductOption__c/fields/Default_Service_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Template_Type__c</fullName>
    <label>Default Service Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Template_Type</valueSetName>
    </valueSet>
</CustomField>