force-app/main/default/objects/SBQQ__ProductOption__c/fields/Optional_ASP__c.field-meta.xml
<CustomField>
    <fullName>Optional_ASP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional (ASP)</label>
    <type>Checkbox</type>
</CustomField>