force-app/main/default/objects/SBQQ__ProductOption__c/fields/Record_Update__c.field-meta.xml
<CustomField>
    <fullName>Record_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to trigger field updates</description>
    <label>Record Update</label>
    <type>Checkbox</type>
</CustomField>